AdvancedNetworkSpecialist/150_AWSCloudWANNetwork/150_SecurityGroups.yaml
---
AWSTemplateFormatVersion: "2010-09-09"
Description:  This template create all Security Groups

Parameters:
  # Global parameters
  Bucket:
    Default: "hawkfund-cloudformation"
    Description: CloudFormation buket URL
    Type: String
  BucketKey:
    Default: "150_AWSCloudWANNetwork"
    Description: Key to find object in the bucket
    Type: String
  BucketObject:
    Default: "Data.json"
    Description: "File to store data in the bucket"
    Type: String
  BucketRegion:
    AllowedValues: ["eu-west-3", "eu-central-1"]
    Default: "eu-west-3"
    Description: "Region where is the Bucket"
    Type: String
  EnvironmentName:
    AllowedValues: ["dev", "test", "staging", "prod"]
    ConstraintDescription: "Must specify dev, test or prod"
    Default: "dev"
    Description: "Environment name that prefix all resources"
    Type: String    
  ProjectName:
    Default: "ANS"
    Description: "Project name that prefix all resources"
    Type: String
  SaveInS3File:
    AllowedValues: [ "false", "true" ]
    Default: "false"
    Description: "Save resources information in s3 file"
    Type: String
  
  # Stack parameters
  GroupNames:
    Description: "Security Group names"
    Type: CommaDelimitedList
  InstanceVpcIds:
    Type: CommaDelimitedList
  InstanceIngressCidrIp:
    Default: "0.0.0.0/0"
    Type: String
  VpcCount:
    Description: Number of VPCs to create
    Type: Number

Conditions:
  SaveInS3File: !Equals [ !Ref SaveInS3File, "true"]
  SaveInS3FileAndTwoVpcs: !And [ !Equals [ !Ref SaveInS3File, "true" ], !Equals [ !Ref VpcCount, 2 ]  ]
  TwoVpcs: !Equals [ !Ref VpcCount, 2 ]

Resources:
  Instance0SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security Group for Instance"
      GroupName: !Select [0, !Ref GroupNames]
      SecurityGroupIngress:
        - CidrIp: !Ref InstanceIngressCidrIp
          FromPort: -1
          IpProtocol: icmp
          ToPort: -1
        - CidrIp: !Ref InstanceIngressCidrIp
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
      Tags:
        - Key: EnvironmentName
          Value: !Ref EnvironmentName
        - Key: Name
          Value:  !Sub "${ProjectName}-${EnvironmentName}-Instance-SG"
        - Key: ProjectName
          Value: !Ref ProjectName
      VpcId: !Select [0, !Ref InstanceVpcIds]

  Instance0SecurityGroupToS3:
    Type: AWS::CloudFormation::CustomResource
    Condition: SaveInS3File 
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
    Properties:
      ServiceToken: !Join [ ":", [ "arn:aws:lambda", !Sub "${AWS::Region}", !Sub "${AWS::AccountId}", "function:Ec2ResourceToS3"]]
      ServiceTimeout: 60
      Bucket: !Ref Bucket
      BucketKey: !Ref BucketKey
      BucketObject: !Ref BucketObject
      Region: !Ref AWS::Region
      ResourceType: "SecurityGroup"
      Key: !Sub "${AWS::Region}:${ProjectName}:${EnvironmentName}:EC2:SecurityGroup:Instance"
      Value: !Ref Instance0SecurityGroup

  Instance1SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Condition: TwoVpcs
    DeletionPolicy: Delete
    Properties:
      GroupDescription: "Security Group for Instance"
      GroupName: !Select [1, !Ref GroupNames]
      SecurityGroupIngress:
        - CidrIp: !Ref InstanceIngressCidrIp
          FromPort: -1
          IpProtocol: icmp
          ToPort: -1
        - CidrIp: !Ref InstanceIngressCidrIp
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
      Tags:
        - Key: EnvironmentName
          Value: !Ref EnvironmentName
        - Key: Name
          Value:  !Sub "${ProjectName}-${EnvironmentName}-Instance-SG"
        - Key: ProjectName
          Value: !Ref ProjectName
      VpcId: !Select [1, !Ref InstanceVpcIds]

  Instance1SecurityGroupToS3:
    Type: AWS::CloudFormation::CustomResource
    Condition: SaveInS3FileAndTwoVpcs 
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
    Properties:
      ServiceToken: !Join [ ":", [ "arn:aws:lambda", !Sub "${AWS::Region}", !Sub "${AWS::AccountId}", "function:Ec2ResourceToS3"]]
      ServiceTimeout: 60
      Bucket: !Ref Bucket
      BucketKey: !Ref BucketKey
      BucketObject: !Ref BucketObject
      Region: !Ref AWS::Region
      ResourceType: "SecurityGroup"
      Key: !Sub "${AWS::Region}:${ProjectName}:${EnvironmentName}:EC2:SecurityGroup:Instance"
      Value: !Ref Instance1SecurityGroup

Outputs:
  InstanceSecurityGroupIds:
    Description: "Security GroupIds for the Instance"
    Value: !If
      - TwoVpcs
      - !Join [ ",", [ !GetAtt Instance0SecurityGroup.GroupId, !GetAtt Instance1SecurityGroup.GroupId ] ]
      - !GetAtt Instance0SecurityGroup.GroupId
